--- a/Backoffice/Shared/MainLayout.razor
+++ b/Backoffice/Shared/MainLayout.razor
@@ -12,6 +12,8 @@
     return;
 }
 
+<h1>User: @CurrentBoUserUser.Id</h1>
+
 <ToastContainer/>
 <div class="page">
     <div class="sidebar">
@@ -35,8 +37,7 @@
     {
         if (HttpContext?.HttpContext?.Request?.Headers == null)
         {
-            Console.WriteLine($"No http context at OnInitializedAsync {HttpContext?.HttpContext == null}|{HttpContext?.HttpContext?.Request==null}|{HttpContext?.HttpContext?.Request?.Headers}");
-            Console.WriteLine($"{HttpContext?.HttpContext.Request.Method}|{HttpContext?.HttpContext.Request.Path}|{HttpContext?.HttpContext.Request.Protocol}|{HttpContext?.HttpContext.Request.Scheme}");
+            Console.WriteLine($"No http context at OnInitializedAsync {HttpContext?.HttpContext == null}|{HttpContext?.HttpContext?.Request==null}|{HttpContext?.HttpContext?.Request?.Headers==null}");
         }
         var boUser = await HttpContext.HttpContext.GetBoUserId();
         CurrentBoUserUser = await BoUsers.GetBoUserById(boUser);
