assets managment is done

--- a/Backoffice/Components/Assets/AssetDetailsDialog.razor
+++ b/Backoffice/Components/Assets/AssetDetailsDialog.razor
@@ -20,7 +20,7 @@
                     </tr>
                     <tr>
                         <td style="background: @(Item.KycRequiredForWithdrawal ? "orange" : "#28a745")">@Item.KycRequiredForDeposit</td>
-                        <td style="background: @(!Item.KycRequiredForWithdrawal ? "orange" : "#28a745")">@Item.KycRequiredForWithdrawal</td>
+                        <td style="background: @(Item.KycRequiredForWithdrawal ? "orange" : "#28a745")">@Item.KycRequiredForWithdrawal</td>
                     </tr>
                 </table>
             </td>
