fix error with logger

--- a/Backoffice/Components/Assets/AssetListComponent.razor
+++ b/Backoffice/Components/Assets/AssetListComponent.razor
@@ -5,7 +5,7 @@
 
 @inject IAssetsDictionaryService AssetsDictionaryService;
 @inject IToaster ToastService
-@inject ILogger Logger;
+@inject ILogger<bool> Logger;
 
 <Loader LoaderConfig="@LoaderConfig"/>
 
