--- a/Backoffice/Shared/Dialogs/BaseTwoButtonsDialog.razor
+++ b/Backoffice/Shared/Dialogs/BaseTwoButtonsDialog.razor
@@ -9,8 +9,8 @@
         </div>
         <div style="text-align: center; margin-top: 5px;">
             <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-              <button @onclick="OnSubmit" type="button" class="btn btn-outline-success">@(YesButtonCaption ?? "Submit")</button>
-              <button @onclick="OnClose" type="button" class="btn btn-outline-danger">@(NoButtonCaption ?? "Cancel")</button>
+              <button @onclick="OnSubmit" type="button" class="btn btn-outline-success" style="margin: 10px; border-radius: 10px">@(YesButtonCaption ?? "Submit")</button>
+              <button @onclick="OnClose" type="button" class="btn btn-outline-danger" style="margin: 10px; border-radius: 10px">@(NoButtonCaption ?? "Cancel")</button>
             </div>
         </div>
     </div>
