--- a/Backoffice/Components/Assets/AssetListComponent.razor
+++ b/Backoffice/Components/Assets/AssetListComponent.razor
@@ -1,20 +1,16 @@
 ﻿@using Service.AssetsDictionary.Grpc
 @using Backoffice.Abstractions.Models
-@using Microsoft.Extensions.Logging
-@using Service.AssetsDictionary.Domain.Models
+@using Backoffice.Services.Assets
+@using Service.AssetsDictionary.MyNoSql
 
-@inject IAssetsDictionaryService AssetsDictionaryService;
+@inject IAssetItemManager AssetItemManager;
 @inject IToaster ToastService
-@inject ILogger<bool> Logger;
 
 <Loader LoaderConfig="@LoaderConfig"/>
 
-
-<p class="float-left"><span class="h2">Asset list</span></p>
-
-<ul class="nav float-right">
-    <li><button @onclick="OnRefresh" type="button" class="btn btn-outline-primary">Refresh</button></li>
-    <li><button @onclick="OnAddAsset" type="button" class="btn btn-outline-success">Add</button></li>
+<ul class="nav float-left">
+    <li><button @onclick="OnRefresh" type="button" class="btn btn-outline-primary" style="margin: 5px; border-radius: 10px">Refresh</button></li>
+    <li><button @onclick="OnAddAsset" type="button" class="btn btn-outline-success" style="margin: 5px; border-radius: 10px">Add</button></li>
 </ul>
 
 <table class="table">
@@ -25,8 +21,9 @@
             <th>Description</th>
             <th>Enabled</th>
             <th>Accuracy</th>
-            <th>Kyc Deposit</th>
-            <th>Kyc Withdrawal</th>
+            <th>Deposit</th>
+            <th>Withdrawal</th>
+            <th>Brands</th>
             <th></th>
         </tr>
     </thead>
@@ -49,48 +46,28 @@
 
 @code {
     private string Message { get; set; } = "-- none --";
-    
-    public ILoaderConfiguration LoaderConfig { get; set; } = new LoaderConfiguration();
+
+    private ILoaderConfiguration LoaderConfig { get; set; } = new LoaderConfiguration();
     
     private bool IsShowAdding { get; set; }
 
-    private async void OnGetCountAssets()
-    {
-        try
-        {
-            var assetList = await AssetsDictionaryService.GetAllAssetsAsync();
-
-            Message = $"Count Assets is {assetList.Assets.Length}";
-        }
-        catch (Exception ex)
-        {
-            Message = "Cannot get asset list";
-        }
-
-        StateHasChanged();
-    }
-
+    private List<AssetItem> AssetList { get; set; } = new();
 
     private async void OnRefresh()
     {
         LoaderConfig.Enable();
-        AssetList = new Asset[] {};
         
-        var assetList = await AssetsDictionaryService.GetAllAssetsAsync();
-
-        AssetList = assetList.Assets;
+        AssetList = await AssetItemManager.GetAll();
         
         LoaderConfig.Disable();
         await InvokeAsync(StateHasChanged);
     }
 
-    public Asset[] AssetList { get; set; } = new Asset[] {};
-
-    protected override async void OnInitialized()
+    protected override void OnInitialized()
     {
-        base.OnInitialized();
-
         OnRefresh();
+        
+        base.OnInitialized();
     }
 
 
@@ -106,18 +83,19 @@
         StateHasChanged();
     }
     
-    private async void OnCreateAsset(Asset asset)
+    private async void OnCreateAsset(AssetItem item)
     {
         try
-        {   
-            var result = await AssetsDictionaryService.CreateAssetAsync(asset);
-            if (!result.IsSuccess)
-            {
-                ToastService.Error(result.ErrorMessage, "Create asset");
-                return;
-            }
+        {
+            item.PaymentSettings.PartitionKey = AssetPaymentSettingsNoSqlEntity.GeneratePartitionKey(item.Asset.BrokerId);
+            item.PaymentSettings.RowKey = AssetPaymentSettingsNoSqlEntity.GenerateRowKey(item.Asset.Symbol);
+            item.PaymentSettings.Symbol = item.Asset.Symbol;
+            item.PaymentSettings.BrokerId = item.Asset.BrokerId;
+            item.PaymentSettings.PaymentSettings.AssetSymbol = item.Asset.Symbol;
 
-            ToastService.Info($"Asset {asset.Symbol} is created", "Create asset");
+            await AssetItemManager.CreateAsset(item);
+            
+            ToastService.Info($"Asset {item.Asset.Symbol} is created", "Create asset");
             
             IsShowAdding = false;
             
@@ -125,30 +103,25 @@
         }
         catch (Exception ex)
         {
-            Logger.LogError(ex, "Cannot create asset");
-            ToastService.Error("Cannot create asset, service is not available", "Asset creation");
+            ToastService.Error(ex.Message, "Asset creation");
         }
     }
 
-    private async void DeleteAsset(Asset asset)
+    private async void DeleteAsset(AssetItem item)
     {
         try
         {
-            var result = await AssetsDictionaryService.DeleteAssetAsync(asset);
+            await AssetItemManager.DeleteAsset(item);
             
-            if (result.IsSuccess)
-                ToastService.Info($"Asset {asset.Symbol} is deleted", "Delete asset");
-            else
-                ToastService.Error(result.ErrorMessage, "Delete asset");
-
+            ToastService.Info($"Asset {item.Asset.Symbol} is deleted", "Delete asset");
+            
             IsShowAdding = false;
             
             OnRefresh();    
         }
         catch (Exception ex)
         {
-            Logger.LogError(ex, "Cannot delete asset");
-            ToastService.Error("Cannot delete asset, service is not available", "Asset deletion");
+            ToastService.Error(ex.Message, "Asset deletion");
         }
     }
 }
