--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -13,12 +13,13 @@
 @using Backoffice.Search
 @using Backoffice.Shared.Date
 @using Backoffice.Components
-@using Backoffice.Components.Deposits
 @using Syncfusion.Blazor.DropDowns
 @using Sotsera.Blazor.Toaster
 @using MW.Blazor
 @using Radzen
 @using Radzen.Blazor
-@using Backoffice.Components.Assets
 @using Backoffice.Components.Common
+@using Backoffice.Components.Assets
+@using Backoffice.Components.SpotInstruments
+
 
